--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-/Assets/Scenes/rayyan-parkar.unity
-/Assets/Scenes/rayyan-parkar.unity.meta
+
+/Assets/Scenes/sahin.unity
+/Assets/Scenes/sahin.unity.meta
