--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,7 @@
 *.controller filter=lfs diff=lfs merge=lfs -text
 *.shadergraph filter=lfs diff=lfs merge=lfs -text
 *.shadersubgraph filter=lfs diff=lfs merge=lfs -text
+*.asset binary
+*.unity binary
+*.prefab binary
+
