--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-# /[Bb]uild/
-# /[Bb]uilds/
+/[Bb]uild/
+/[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
@@ -74,4 +74,5 @@ crashlytics-build.properties
 /Assets/Scenes/rayyan-parkar.unity.meta
 
 /Assets/Scenes/sahin.unity
-/Assets/Scenes/sahin.unity.meta
+/Assets/Scenes/sahin.unity.meta.DS_Store
+**/.DS_Store
