Stop tracking unnecessayscene files, add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ crashlytics-build.properties
 /Assets/Scenes/sahin.unity
 /Assets/Scenes/sahin.unity.meta.DS_Store
 **/.DS_Store
+Assets/Scenes/Actual Main Meldy.unity
+Assets/Scenes/Puzzles.unity
