--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ crashlytics-build.properties
 
 /Assets/Scenes/sahin.unity
 /Assets/Scenes/sahin.unity.meta
+
+# Sci-Fi Warehouse Kit (import from Asset Store)
+Assets/SciFi Warehouse Kit/
+!Assets/SciFi Warehouse Kit/.gitkeep
